@@ -1,5 +1,12 @@
 2009-04-02  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Enhance functions with scale and bounds easier to manage.
+	* src/function.cc,
+	* src/function.hh: Add scale, make bounds easier to handle.
+	* src/ipopt.cc: Set bound multiplier to 1. for now.
+
+2009-04-02  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Update TODO.
 	* TODO: Here.
 
